--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
     sdk: flutter
   http: ^0.13.5
   flutter_cache_manager: ^3.3.0
-  wallpaper_manager: ^1.0.8
+  flutter_wallpaper_manager: ^0.0.3
    
 
 
